gitops/infra/onprem/proxy/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: onprem-proxy
  labels:
    app: jellyfin
spec:
 ports:
  - protocol: TCP
    name: http
    port: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: onprem-proxy
subsets: 
- addresses:
  - ip: 10.0.1.1
  ports:
  - port: 8096
