gitops/infra/onprem/proxy/jellyfin/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-external
  namespace: onprem-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  tls:
  - hosts:
    - grafana.tetra.konst.fish
    secretName: grafana-tls
  ingressClassName: nginx
  rules:
  - host: jellyfin.konst.fish
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
