gitops/infra/onprem/proxy/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: onprem-proxy
spec:
  ingressClassName: nginx-internal
  rules:
  - host: jellyfin.konst.fish
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
